Remove obsolete cookies strings

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -1,7 +1,3 @@
-# LOCALIZATION NOTE (extensions.firecookie@janodvarko.cz.description):
-# Description of this extension.
-extensions.firecookie@janodvarko.cz.description=Cookie manager for Firebug. Firebug has to be installed in order to use this extension.
-
 # LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
 cookies.Panel=Cookies
 panel.tip.cookies=Allows inspecting and manipulating the cookies
@@ -266,7 +262,7 @@ cookies.menu.Edit_Breakpoint_Condition=Edit Breakpoint Condition
 # within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
 cookies.Breakpoint_condition_evaluation_fails=Breakpoint condition evaluation fails
 
-# DTD strings converted (main Firecokie UI, see fireCookie.xul)
+# DTD strings converted (main Firecokie UI, see cookiePanel.xul)
 cookies.RemoveAll=Remove Cookies
 cookies.Create=Create Cookie
 
@@ -285,13 +281,6 @@ cookies.ViewAllTooltip=Open the built-in Cookie Manager
 # dialog for setting web site cookie permissions.
 cookies.ViewExceptions=Web Sites Permissions
 cookies.ViewExceptionsTooltip=View list of allowed or prohibited web sites
-
-# LOCALIZATION NOTE (cookies.Help, cookies.HelpTooltip, cookies.About,
-# cookies.AboutTooltip) Labels and tooltips for additional menu items in Tools menu.
-cookies.Help=Help
-cookies.HelpTooltip=Help for Firecookie
-cookies.About=About
-cookies.AboutTooltip=About Firecookie
 
 # LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
 # cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
