Issue 5560 (Add column for raw value) http://code.google.com/p/fbug/issues/detail?id=5560

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -180,12 +180,13 @@ cookies.edit.invalidname=Cookie name is not valid.
 cookies.edit.invalidhost=Cookie host is not valid.
 cookies.edit.invalidpath=Cookie path is not valid.
 
-# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
-# cookies.header.size, cookies.header.path, cookies.header.expires,
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.rawValue,
+# cookies.header.domain, cookies.header.size, cookies.header.path, cookies.header.expires,
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
 # Column labels used in the cookie header.
 cookies.header.name=Name
 cookies.header.value=Value
+cookies.header.rawValue=Raw Value
 cookies.header.domain=Domain
 cookies.header.size=Size
 cookies.header.path=Path
@@ -195,12 +196,13 @@ cookies.header.status=Status
 cookies.header.httponly=HttpOnly
 
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
-# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
-# cookies.header.expires.tooltip, cookies.header.security.tooltip,
+# cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
+# cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Name of the cookie
 cookies.header.value.tooltip=Value stored for the cookie
+cookies.header.rawValue.tooltip=Raw value stored for the cookie
 cookies.header.domain.tooltip=Domain that has stored the cookie
 cookies.header.size.tooltip=Size of the stored cookie
 cookies.header.path.tooltip=Directory where the cookie is active
