Locale update: pl

--- a/extension/locale/pl/cookies.properties
+++ b/extension/locale/pl/cookies.properties
@@ -1,56 +1,138 @@
-extensions.firecookie@janodvarko.cz.description=Menedżer ciasteczek dla Firebuga. Aby używać to rozszerzenie, musi być zainstalowane rozszerzenie Firebug.
+# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
 cookies.Panel=Ciasteczka
+panel.tip.cookies=Umożliwia kontrolę i sterowanie ciasteczkami
+# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
 cookies.Session=Sesja
+# LOCALIZATION NOTE (cookies.AllowGlobally, cookies.tip.AllowGlobally):
+# Label used for cookies permission.
 cookies.AllowGlobally=Akceptuj ciasteczka pochodzące z witryn
+cookies.tip.AllowGlobally=Wszystkie ciasteczka będą domyślnie akceptuowane lub blokowane
+# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
+# If checked, various cookies events are displayed in Firebug's Console panel.
 cookies.LogEvents=Wyświetlaj zdarzenia w konsoli
+cookies.tip.LogEvents=Różne zdarzenia ciasteczek (zmiany, usunięcie) będą wyświetlane w panelu Konsola
+# LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
+# small arrow next to the Cookies panel label). If checked, cookies are automatically removed
+# if the permission is changed to deny.
+# xxxHonza: currently not displayed in the UI
 cookies.clearWhenDeny=Czyść ciasteczka, gdy nie są zaakceptowane
+# LOCALIZATION NOTE (cookies.Cut, cookies.Copy, cookies.CopyAll, cookies.Paste,
+# cookies.Delete): Support for clipboard actions. Used in a cookie context menu
+# (right click on a cookie in the Cookies panel).
 cookies.Cut=Wytnij
 cookies.Copy=Kopiuj
 cookies.CopyAll=Kopiuj wszystko
 cookies.Paste=Wklej
 cookies.Delete=Usuń
+# LOCALIZATION NOTE (cookies.Clear Value): Label for an item in the cookie context menu.
+# Clears cookie value, but not removes the cookie itself.
 cookies.Clear_Value=Wyczyść zawartość
+# LOCALIZATION NOTE (cookies.Edit): Label for an item in the cookie context menu. Displays
+# a dialog for editing clicked cookie.
 cookies.Edit=Edytuj
 cookies.Accept=Akceptuj
+# LOCALIZATION NOTE (cookies.header.Reset_Header): Used in cookie header context menu (right
+# click on a header in the Cookies panel). This action restores default state of the header
+# (visibility and size of all columns)
 cookies.header.Reset_Header=Resetuj nagłówek
+# LOCALIZATION NOTE (cookies.Intro, cookies.ExceptionsTitle): Used for managing Cookie panel
+# enablement. Used only if Firebug 1.2 and 1.3 is installed
 cookies.Intro=Możesz określać zasady akceptacji ciasteczek. Podaj dokładny adres\nwitryny, której uprawnieniami chcesz zarządzać i następnie naciśnij\nprzycisk Zezwól, Zablokuj lub Zezwól na czas sesji.
 cookies.ExceptionsTitle=Wyjątki - Ciasteczka
+# LOCALIZATION NOTE (cookies.modulemanager.description, cookies.HostEnable, cookies.HostDisable,
+# cookies.Permissions, cookies.PermissionsIntro): Various labels used for mangaing Cookies panel
+# enablement. Used only if Firebug 1.2 and 1.3 is installed.
+# examples: Enable Cookies panel for www.softwareishard.com
 cookies.modulemanager.description=Obsługuje monitorowanie ciasteczek
 cookies.HostEnable=Włącz panel ciasteczek dla %S
 cookies.HostDisable=Wyłącz panel ciasteczek dla %S
-cookies.Permissions=Włączanie/wyłączanie panela ciasteczek
+cookies.Permissions=Włączanie/wyłączanie panelu ciasteczek
 cookies.PermissionsIntro=Wybierz witryny, gdzie panel ciasteczek będzie włączony/wyłączony.
+# LOCALIZATION NOTE (cookies.SystemPages, cookies.LocalFiles): Labels used in the Cookies
+# panel if it's disabled (only for Firebug 1.2 and 1.3).
 cookies.SystemPages=Strony systemowe
 cookies.LocalFiles=Pliki lokalne
+# LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when cookies
+# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
 cookies.confirm.removeall=Czy chcesz usunąć wszystkie ciasteczka z listy?
+# LOCALIZATION NOTE (cookies.confirm.removeallsession): Used in a confirmation dialog when
+# all session cookies are going to be deleted
 cookies.confirm.removeallsession=Czy chcesz usunąć wszystkie ciasteczka sesji z listy?
+# LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
+# Message within a confirmation dialog that is displayed when deleting cookies.
+# This message is displayed next to a check-box that can be used to disabled this
+# confirmation.
 cookies.msg.Do_not_show_this_message_again=Nie wyświetlaj tej informacji ponownie
+# LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
+# that says whether a confirmation dialog is displayed when removing cookies. 
 cookies.Confirm_cookie_removal=Potwierdzaj usuwanie ciasteczek
+cookies.tip.Confirm_cookie_removal=Jeśli funkcja ta zostanie uaktywniona, przed usunięciem wszystkich ciasteczek z listy będzie wyświetlane okno dialogowe z prośbą o potwierdzenie wykonania operacji.
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
 cookies.removeall.tooltip=Usuwa wszystkie ciasteczka z listy
+# LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
+# Cookies->Remove Session Cookies menu
 cookies.Remove_Session_Cookies=Usuń ciasteczka sesji
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
 cookies.removeallsession.tooltip=Usuwa wszystkie ciasteczka sesji z listy
+# LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
+# examples: Create new cookie for www.softwareishard.com
 cookies.createcookie.tooltip=Tworzy nowe ciasteczko dla %S
+# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
 cookies.createcookie.defaultvalue=Zawartość
+# LOCALIZATION NOTE (cookies.perm.manage.tooltip): A tooltip for permissions button that
+# is located on a Cookis panel toolbar.
+# examples: Manage cookie permissions for www.softwareishard.com
 cookies.perm.manage.tooltip=Zarządzanie zezwoleniami ciasteczek dla %S
-cookies.console.cookiescleared=Wszystkie ciasteczka zostały usunięte
-cookies.console.sessioncookiescleared=Wszystkie ciasteczka sesji zostały usunięte
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
+# Remove All Cookies in the dialog.
+cookies.console.cookiescleared=Wszystkie ciasteczka zostały usunięte.
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
+# Remove All Cookies in the dialog.
+cookies.console.sessioncookiescleared=Wszystkie ciasteczka sesji zostały usunięte.
+# LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
+# A label for a cookie event that is displayed in Firebug's Console panel when cookies are
+# rejected by the current site.
 cookies.console.cookiesrejected=Ciasteczka odrzucone:
 cookies.console.nocookiesreceived=Nie otrzymano ciasteczek
+# LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
+# cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
+# events displayed in Firebug's Console panel.
 cookies.console.cookie=Ciasteczko
 cookies.console.deleted=usunięto
 cookies.console.added=dodano
 cookies.console.changed=zmieniono
 cookies.console.cleared=wyczyszczono
+# LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
+# Displayed in the Cookies panel for domain cookies.
+# xxxHonza: not used in the UI now.
 cookies.domain.label=Domena
+# LOCALIZATION NOTE (cookies.secure.label): Label used for marking secure cookie.
+# Displayed in the Cookies panel for secure cookies.
 cookies.secure.label=Bezpieczne
+# LOCALIZATION NOTE (cookies.status.accepted, cookies.status.downgraded,
+# cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
+# displayed in Status column.
 cookies.status.accepted=Zaakceptowane
 cookies.status.downgraded=Zdegradowane
 cookies.status.flagged=Oznaczone
 cookies.status.rejected=Odrzucone
+# LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
+# cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
+# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
 cookies.info.valuetab.label=Zawartość
 cookies.info.rawdatatab.Raw_Data=Dane RAW
 cookies.info.jsontab.JSON=JSON
 cookies.info.xmltab.XML=XML
+# LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
+# cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
+# cookies.default.warn, cookies.host.session, cookies.host.accept,
+# cookies.host.reject): Various labels for cookie permissions.
+# examples: Accept cookies from www.softwareishard.com
 cookies.default.session=Akceptuj ciasteczka sesji (domyślne)
 cookies.default.thirdPartySession=Akceptuj ciasteczka sesji (domyślne)
 cookies.default.thirdParty=Akceptuj ciasteczka (domyślne)
@@ -60,9 +142,16 @@ cookies.default.warn=Pytaj przed zaakceptowaniem (domyślne)
 cookies.host.session=Akceptuj ciasteczka sesji z %S
 cookies.host.accept=Akceptuj ciasteczka z %S
 cookies.host.reject=Nie akceptuj ciasteczek z %S
-cookies.edit.invalidname=Nazwa ciasteczka jest nie prawidłowa.
-cookies.edit.invalidhost=Serwer ciasteczka jest nie prawidłowy.
-cookies.edit.invalidpath=Ścieżka ciasteczka jest nie prawidłowa.
+# LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
+# cookies.edit.invalidpath): Various error messages used when a new cookie is created
+# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
+cookies.edit.invalidname=Nazwa ciasteczka jest nieprawidłowa.
+cookies.edit.invalidhost=Serwer ciasteczka jest nieprawidłowy.
+cookies.edit.invalidpath=Ścieżka ciasteczka jest nieprawidłowa.
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
+# cookies.header.size, cookies.header.path, cookies.header.expires,
+# cookies.header.security, cookies.header.status, cookies.header.httponly):
+# Column labels used in the cookie header.
 cookies.header.name=Nazwa
 cookies.header.value=Zawartość
 cookies.header.domain=Domena
@@ -72,6 +161,11 @@ cookies.header.expires=Wygasa
 cookies.header.security=Bezpieczeństwo
 cookies.header.status=Status
 cookies.header.httponly=Tylko HTTP
+# LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
+# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
+# cookies.header.expires.tooltip, cookies.header.security.tooltip,
+# cookies.header.status.tooltip, cookies.header.httponly.tooltip):
+# Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Nazwa ciasteczka
 cookies.header.value.tooltip=Zawartość ciasteczka
 cookies.header.domain.tooltip=Domena przechowująca ciasteczko
@@ -81,40 +175,79 @@ cookies.header.expires.tooltip=Data wygaśnięcia ciasteczka
 cookies.header.security.tooltip=Wskazuje czy ciasteczko jest bezpieczne, czy nie
 cookies.header.status.tooltip=Status ciasteczka (zdegradowane, oznaczone…)
 cookies.header.httponly.tooltip=Wyświetla tylko jeśli ciasteczko jest ciasteczkiem HTTP
+# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
+# Labels used in the Firebug's net panel. If there are any cookies associated with a network
+# request, there is an additional Cookies tab displayed when the user expands the request.
+# These labels are used within this tab.
 cookies.netinfo.Received_Cookies=Odebrane ciasteczka
 cookies.netinfo.Sent_Cookies=Wysłane ciasteczka
+# LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
+# xxxHonza: Not implemented yet.
 cookies.Path_Filter=Filtr ścieżki
+# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
 cookies.menu.Cookies=Ciasteczka
+# LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
+# cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
+# tooltips for exporting menus available under Cookies menus.
 cookies.export.Export_All_Cookies=Eksportuj wszystkie ciasteczka…
 cookies.export.Export_All_Cookies_Tooltip=Eksportuje wszystkie ciasteczka przeglądarki do pliku cookies.txt
 cookies.export.Export_For_Site=Eksportuj ciasteczka dla tej witryny…
-cookies.export.Export_For_Site_Tooltip=Eksportuje ciasteczka dla %S do pliku cookies.txt
-cookies.message.There_is_no_active_page=Nie ma aktywnej strony
+cookies.export.Export_For_Site_Tooltip=Eksportuje ciasteczka dla witryny %S do pliku cookies.txt
+# LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
+# when the user is trying to create a cookie and there is no active page (site). This should
+# never happen.
+cookies.message.There_is_no_active_page=Nie ma aktywnej strony.
+# LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.Disable_Break_On_Cookie):
+# Tooltips for resume button that are used when the Cookies panel is currently selected.
+# The button allows stopping JS execution when a cookie on the current page is modified
+# added or removed.
 cookies.Break_On_Cookie=Wstrzymaj na zmianie ciasteczka
 cookies.Disable_Break_On_Cookie=Wyłącz wstrzymanie na zmianie ciasteczka
+# LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
+# displayed in Breakpoints panel (in the Script panel)
 cookies.Cookie_Breakpoints=Punkty wstrzymania ciasteczek
+# LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.menu.tooltip.Break_On_Cookie):
+# Label and tooltip for a context menu item used when the user right clicks on a cookie. 
+# examples: Break on 'MyCookie' cookie
+# examples: Break on 'MyCookie' when removed or changed.
 cookies.menu.Break_On_Cookie=Wstrzymaj na ciasteczku „%S”
-cookies.menu.tooltip.Break_On_Cookie=Wstrzymuje na ciasteczku „%S”, gdy zostało usunięte lub zmienione
+cookies.menu.tooltip.Break_On_Cookie=Wstrzymuje na ciasteczku „%S”, gdy zostało usunięte lub zmienione.
+# LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
+# used when user right clicks on a cookie with existing breakpoint.
 cookies.menu.Edit_Breakpoint_Condition=Modyfikuj warunki punktów wstrzymania
+# LOCALIZATION NOTE (cookies.Breakpoint_condition_evaluation_fails): Message displayed
+# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
 cookies.Breakpoint_condition_evaluation_fails=Nie udało się ocenić warunków punktu wstrzymania
+# DTD strings converted (main Firecokie UI, see cookiePanel.xul)
 cookies.RemoveAll=Usuń ciasteczka
 cookies.Create=Utwórz ciasteczko
+# LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
+# menu on Cookies toolbar.
 cookies.Tools=Narzędzia
 cookies.ToolsTooltip=Narzędzia
+# LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
+# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 cookies.ViewAll=Wyświetl wszystkie ciasteczka…
 cookies.ViewAllTooltip=Otwiera menedżera ciasteczek
+# LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
+# tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
+# dialog for setting web site cookie permissions.
 cookies.ViewExceptions=Uprawnienia witryn…
 cookies.ViewExceptionsTooltip=Wyświetla listę dozwolonych lub zabronionych witryn
-cookies.Help=Pomoc
-cookies.HelpTooltip=Pomoc dla Firecookie
-cookies.About=Firecookie – informacje…
-cookies.AboutTooltip=Informacje o Firecookie
+# LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
+# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
+# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
+# presented on the Cookie toolbar.
 cookies.Filter=Filtr
 cookies.FilterTooltip=Używaj dostarczonych funkcji do filtrowania listy ciasteczek
 cookies.filter.byPath=Filtruj ciasteczka wg aktualnej ścieżki
-cookies.filter.byPathTooltip=Wyświetla tylko ciasteczka pasujące do aktualnej ścieżki
+cookies.filter.byPathTooltip=Wyświetla tylko ciasteczka pasujące do aktualnej ścieżki.
 cookies.filter.showRejectedCookies=Wyświetl odrzucone ciasteczka
-cookies.filter.showRejectedCookiesTooltip=Wyświetla na liście nawet odrzucone ciasteczka
+cookies.filter.showRejectedCookiesTooltip=Wyświetla na liście nawet odrzucone ciasteczka.
+# LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
+# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
+# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
+# cookies.edit.session.label): Edit Cookie dialog UI
 cookies.edit.title=Edytuj ciasteczko
 cookies.edit.name.label=Nazwa:
 cookies.edit.domain.label=Host:
@@ -124,3 +257,10 @@ cookies.edit.value.label=Zawartość:
 cookies.edit.secure.label=Bezpieczne ciasteczko
 cookies.edit.httponly.label=Tylko HTTP
 cookies.edit.session.label=Sesja
+# LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
+# Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
+cookies.console.Cookies=Ciasteczka
+cookies.console.Filter_By_Cookies=Filtruj wg ciasteczek
+# LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
+# Customize Shortcuts dialog (Firebug menu)
+firebug.shortcut.removeAllCookies.label=Usuń wszystkie ciasteczka
