--- a/extension/locale/de/cookies.properties
+++ b/extension/locale/de/cookies.properties
@@ -1,136 +1,138 @@
 # LOCALIZATION NOTE (extensions.firecookie@janodvarko.cz.description):
-# Description of this extension.
-extensions.firecookie@janodvarko.cz.description=Cookie manager für Firebug. Um diese Erweiterung zu nutzen, muss Firebug installiert sein.
-# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
 cookies.Panel=Cookies
-# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
+panel.tip.cookies=Erlaubt es, Cookies zu untersuchen und zu manipulieren
+# Description of this extension.
 cookies.Session=Sitzung
-# LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
+# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
+# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
 cookies.AllowGlobally=Cookies grundsätzlich akzeptieren
+cookies.tip.AllowGlobally=Standardmäßig alle Cookies akzeptieren / verweigern
+# LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
 # LOCALIZATION NOTE (cookies.LogEvents): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, various cookies events are
-# displayed in Firebug's Console panel.
 cookies.LogEvents=Log-Daten in der Konsole anzeigen
+cookies.tip.LogEvents=Erlaubt es, verschiedene Cookie Ereignisse (geändert, gelöscht) im Konsole Panel anzuzeigen
+# displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
-# xxxHonza: currently not displayed in the UI
 cookies.clearWhenDeny=Abgewiesene Cookies sofort löschen.
+# xxxHonza: currently not displayed in the UI
 # LOCALIZATION NOTE (cookies.Cut, cookies.Copy, cookies.CopyAll, cookies.Paste,
 # cookies.Delete): Support for clipboard actions. Used in a cookie context menu
-# (right click on a cookie in the Cookies panel).
 cookies.Cut=Ausschneiden
 cookies.Copy=Kopieren
 cookies.CopyAll=Alle kopieren
 cookies.Paste=Einfügen
 cookies.Delete=Löschen
+# (right click on a cookie in the Cookies panel).
 # LOCALIZATION NOTE (cookies.Clear Value): Label for an item in the cookie context menu.
-# Clears cookie value, but not removes the cookie itself.
 cookies.Clear_Value=Wert löschen
+# Clears cookie value, but not removes the cookie itself.
 # LOCALIZATION NOTE (cookies.Edit): Label for an item in the cookie context menu. Displays
-# a dialog for editing clicked cookie.
 cookies.Edit=Bearbeiten
 cookies.Accept=Akzeptieren
+# a dialog for editing clicked cookie.
 # LOCALIZATION NOTE (cookies.header.Reset_Header): Used in cookie header context menu (right
 # click on a header in the Cookies panel). This action restores default state of the header
-# (visibility and size of all columns)
 cookies.header.Reset_Header=Header zurücksetzen
+# (visibility and size of all columns)
 # LOCALIZATION NOTE (cookies.Intro, cookies.ExceptionsTitle): Used for managing Cookie panel
-# enablement. Used only if Firebug 1.2 and 1.3 is installed
 cookies.Intro=Hier können Sie bestimmen, welche Websites immer oder niemals Cookies setzen dürfen. nGeben Sie die exakte Adresse der Website ein, die Sie bearbeiten wollen, und klicken Sie dann auf Blockieren,
 cookies.ExceptionsTitle=Ausnahmen - Cookies
+# enablement. Used only if Firebug 1.2 and 1.3 is installed
 # LOCALIZATION NOTE (cookies.modulemanager.description, cookies.HostEnable, cookies.HostDisable,
 # cookies.Permissions, cookies.PermissionsIntro): Various labels used for mangaing Cookies panel
 # enablement. Used only if Firebug 1.2 and 1.3 is installed.
-# examples: Enable Cookies panel for www.softwareishard.com
 cookies.modulemanager.description=Support for Cookie Monitoring
 cookies.HostEnable=Enable Cookies panel for %S
 cookies.HostDisable=Disable Cookies panel for %S
 cookies.Permissions=Enable or Disable Cookies panel
 cookies.PermissionsIntro=Choose web sites where Cookies panel will be enabled or disabled.
+# examples: Enable Cookies panel for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.SystemPages, cookies.LocalFiles): Labels used in the Cookies
-# panel if it's disabled (only for Firebug 1.2 and 1.3).
 cookies.SystemPages=Systemseiten
 cookies.LocalFiles=Lokale Dateien
+# panel if it's disabled (only for Firebug 1.2 and 1.3).
 # LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when cookies
-# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
 cookies.confirm.removeall=Cookies aus der Liste entfernen?
+# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
 # LOCALIZATION NOTE (cookies.confirm.removeallsession): Used in a confirmation dialog when
-# all session cookies are going to be deleted
 cookies.confirm.removeallsession=Sollen alle Sitzungscookies der Liste entfernt werden?
+# all session cookies are going to be deleted
 # LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
 # Message within a confirmation dialog that is displayed when deleting cookies.
 # This message is displayed next to a check-box that can be used to disabled this
-# confirmation.
 cookies.msg.Do_not_show_this_message_again=Diese Meldung nicht mehr anzeigen
+# confirmation.
 # LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
-# that says whether a confirmation dialog is displayed when removing cookies. 
 cookies.Confirm_cookie_removal=Entfernen des Cookies bestätigen
-# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
+cookies.tip.Confirm_cookie_removal=Falls aktiviert, wird ein Bestätigungsdialog angezeigt bevor alle Cookies in der Liste gelöscht werden
+# that says whether a confirmation dialog is displayed when removing cookies. 
 cookies.removeall.tooltip=Alle Cookies aus Liste entfernen.
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
 # LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
-# Cookies->Remove Session Cookies menu
 cookies.Remove_Session_Cookies=Sitzungscookies entfernen
-# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
+# Cookies->Remove Session Cookies menu
 cookies.removeallsession.tooltip=Alle Sessioncookies aus der Liste entfernen.
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
 # LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
-# examples: Create new cookie for www.softwareishard.com
 cookies.createcookie.tooltip=Neues Cookie für %S erstellen
-# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
+# examples: Create new cookie for www.softwareishard.com
 cookies.createcookie.defaultvalue=Wert
+# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
 # LOCALIZATION NOTE (cookies.perm.manage.tooltip): A tooltip for permissions button that
 # is located on a Cookis panel toolbar.
-# examples: Manage cookie permissions for www.softwareishard.com
 cookies.perm.manage.tooltip=Cookie Berechtigungen für %S verwalten
+# examples: Manage cookie permissions for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
 # displayed in Firebug's Console panel when all cookie in Firefox are removed
 # To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
-# Remove All Cookies in the dialog.
 cookies.console.cookiescleared=Alle Cookies wurden entfernt.
+# Remove All Cookies in the dialog.
 # LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
 # displayed in Firebug's Console panel when all cookie in Firefox are removed
 # To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
-# Remove All Cookies in the dialog.
 cookies.console.sessioncookiescleared=Alle Sessioncookies wurden entfernt.
+# Remove All Cookies in the dialog.
 # LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
 # A label for a cookie event that is displayed in Firebug's Console panel when cookies are
-# rejected by the current site.
 cookies.console.cookiesrejected=Abgewiesene Cookies:
 cookies.console.nocookiesreceived=Keine Cookies empfangen
+# rejected by the current site.
 # LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
 # cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
-# events displayed in Firebug's Console panel.
 cookies.console.cookie=Cookie
 cookies.console.deleted=Gelöscht
 cookies.console.added=Hinzugefügt
 cookies.console.changed=Geändert
 cookies.console.cleared=geleert
+# events displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
 # Displayed in the Cookies panel for domain cookies.
-# xxxHonza: not used in the UI now.
 cookies.domain.label=Domain
+# xxxHonza: not used in the UI now.
 # LOCALIZATION NOTE (cookies.secure.label): Label used for marking secure cookie.
-# Displayed in the Cookies panel for secure cookies.
 cookies.secure.label=Geschützt
+# Displayed in the Cookies panel for secure cookies.
 # LOCALIZATION NOTE (cookies.status.accepted, cookies.status.downgraded,
 # cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
-# displayed in Status column.
 cookies.status.accepted=Akzeptiert
 cookies.status.downgraded=Reduziert
 cookies.status.flagged=Markiert
 cookies.status.rejected=Abgewiesen
+# displayed in Status column.
 # LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
 # cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
-# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
 cookies.info.valuetab.label=Wert
 cookies.info.rawdatatab.Raw_Data=Rohdaten
 cookies.info.jsontab.JSON=JSON
 cookies.info.xmltab.XML=XML
+# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
 # LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
 # cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
 # cookies.default.warn, cookies.host.session, cookies.host.accept,
 # cookies.host.reject): Various labels for cookie permissions.
-# examples: Accept cookies from www.softwareishard.com
 cookies.default.session=Standard (Sitzungs-Cookies akzeptieren)
 cookies.default.thirdPartySession=Standard (Sitzungs-Cookies akzeptieren)
 cookies.default.thirdParty=Standard (Cookies akzeptieren)
@@ -140,16 +142,16 @@ cookies.default.warn=Standard (Vor dem Akzeptieren eines Cookies warnen)
 cookies.host.session=Akzeptiere Sitzungs-Cookies von %S
 cookies.host.accept=Akzeptiere Cookies von %S
 cookies.host.reject=Cookies von %S zurückweisen
+# examples: Accept cookies from www.softwareishard.com
 # LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
 # cookies.edit.invalidpath): Various error messages used when a new cookie is created
-# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
 cookies.edit.invalidname=Cookie name is not valid.
 cookies.edit.invalidhost=Cookie host is not valid.
 cookies.edit.invalidpath=Cookie path is not valid.
+# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
 # LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
 # cookies.header.size, cookies.header.path, cookies.header.expires,
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
-# Column labels used in the cookie header.
 cookies.header.name=Name
 cookies.header.value=Wert
 cookies.header.domain=Domain
@@ -159,11 +161,11 @@ cookies.header.expires=Verfallsdatum
 cookies.header.security=Sicherheit
 cookies.header.status=Status
 cookies.header.httponly=HttpOnly
+# Column labels used in the cookie header.
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
 # cookies.header.expires.tooltip, cookies.header.security.tooltip,
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
-# Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Name
 cookies.header.value.tooltip=Wert
 cookies.header.domain.tooltip=Domain
@@ -173,85 +175,79 @@ cookies.header.expires.tooltip=Verfallsdatum
 cookies.header.security.tooltip=Sicherheit
 cookies.header.status.tooltip=Status
 cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
+# Column tooltips used in the cookie header.
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
 # request, there is an additional Cookies tab displayed when the user expands the request.
-# These labels are used within this tab.
 cookies.netinfo.Received_Cookies=Empfangene Cookies
 cookies.netinfo.Sent_Cookies=Gesendete Cookies
+# These labels are used within this tab.
 # LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
-# xxxHonza: Not implemented yet.
 cookies.Path_Filter=Pfadfilter
-# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
+# xxxHonza: Not implemented yet.
 cookies.menu.Cookies=Cookies
+# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
 # LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
 # cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
-# tooltips for exporting menus available under Cookies menus.
 cookies.export.Export_All_Cookies=Alle Cookies exportieren
 cookies.export.Export_All_Cookies_Tooltip=Alle Browsercookies nach cookies.txt exportieren
 cookies.export.Export_For_Site=Cookies für die Website exportieren ...
 cookies.export.Export_For_Site_Tooltip=Cookies für %S nach cookies.txt exportieren.
+# tooltips for exporting menus available under Cookies menus.
 # LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
 # when the user is trying to create a cookie and there is no active page (site). This should
-# never happen.
 cookies.message.There_is_no_active_page=Es gibt keine aktive Seite.
+# never happen.
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.Disable_Break_On_Cookie):
 # Tooltips for resume button that are used when the Cookies panel is currently selected.
 # The button allows stopping JS execution when a cookie on the current page is modified
-# added or removed.
 cookies.Break_On_Cookie=Bei Cookie Änderung anhalten
 cookies.Disable_Break_On_Cookie=Bei Cookie Änderung anhalten deaktivieren
+# added or removed.
 # LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
-# displayed in Breakpoints panel (in the Script panel)
 cookies.Cookie_Breakpoints=Cookie Haltepunkte
+# displayed in Breakpoints panel (in the Script panel)
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.menu.tooltip.Break_On_Cookie):
 # Label and tooltip for a context menu item used when the user right clicks on a cookie. 
 # examples: Break on 'MyCookie' cookie
-# examples: Break on 'MyCookie' when removed or changed.
 cookies.menu.Break_On_Cookie=An '%S' Cookie anhalten
 cookies.menu.tooltip.Break_On_Cookie=Bei '%S' anhalten, falls entfernt oder geändert.
+# examples: Break on 'MyCookie' when removed or changed.
 # LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
-# used when user right clicks on a cookie with existing breakpoint.
 cookies.menu.Edit_Breakpoint_Condition=Haltepunktbedingung bearbeiten
+# used when user right clicks on a cookie with existing breakpoint.
 # LOCALIZATION NOTE (cookies.Breakpoint_condition_evaluation_fails): Message displayed
-# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
 cookies.Breakpoint_condition_evaluation_fails=Evaluierung der Haltepunktbedingung fehlgeschlagen
-# DTD strings converted (main Firecokie UI, see fireCookie.xul)
+# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
 cookies.RemoveAll=Für diese Website entfernen
 cookies.Create=Cookie erstellen
+# DTD strings converted (main Firecokie UI, see fireCookie.xul)
 # LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
-# menu on Cookies toolbar.
 cookies.Tools=Tools
 cookies.ToolsTooltip=Tools
+# menu on Cookies toolbar.
 # LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
-# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 cookies.ViewAll=Alle Cookies anzeigen...
 cookies.ViewAllTooltip=Cookie-Manager öffnen
+# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 # LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
 # tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
-# dialog for setting web site cookie permissions.
 cookies.ViewExceptions=Website-Berechtigungen...
 cookies.ViewExceptionsTooltip=Liste aller berechtigten und blockierten Websites anzeigen
+# dialog for setting web site cookie permissions.
 # LOCALIZATION NOTE (cookies.Help, cookies.HelpTooltip, cookies.About,
 # cookies.AboutTooltip) Labels and tooltips for additional menu items in Tools menu.
-cookies.Help=Hilfe
-cookies.HelpTooltip=Hilfe für Firecookie
-cookies.About=Über...
-cookies.AboutTooltip=Über Firecookie
 # LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
-# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
-# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
-# presented on the Cookie toolbar.
 cookies.Filter=Filter
 cookies.FilterTooltip=Einstellungen als Filter übernehmen.
 cookies.filter.byPath=Cookies nach Pfad filtern
 cookies.filter.byPathTooltip=Nur Cookies anzeigen, die mit dem aktuellen Pfad übereinstimmen.
 cookies.filter.showRejectedCookies=Blockierte Cookies anzeigen
 cookies.filter.showRejectedCookiesTooltip=Auch blockierte Cookies werden in der Liste angezeigt.
+# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
+# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
+# presented on the Cookie toolbar.
 # LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
-# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
-# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
-# cookies.edit.session.label): Edit Cookie dialog UI
 cookies.edit.title=Cookie bearbeiten
 cookies.edit.name.label=Name:
 cookies.edit.domain.label=Host:
@@ -261,3 +257,10 @@ cookies.edit.value.label=Wert:
 cookies.edit.secure.label=Cookie schützen
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=Sitzung
+# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
+# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
+cookies.console.Cookies=Cookies
+cookies.console.Filter_By_Cookies=Nach Cookies Filtern
+# cookies.edit.session.label): Edit Cookie dialog UI
+# Customize Shortcuts dialog (Firebug menu)
+firebug.shortcut.removeAllCookies.label=Alle Cookies entfernen
