Issue 2796: Ability to create a new rule in the style panel
http://code.google.com/p/fbug/issues/detail?id=2796

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -301,6 +301,8 @@ css.EmptyElementCSS=This element has no style rules. You can <a>create a rule</a
 
 EditStyle=Edit Element Style...
 style.tip.Edit_Style=Edit the element's inline style
+AddRule=Add Rule...
+css.tip.AddRule=Add a general rule for this element
 NewRule=New Rule...
 css.tip.New_Rule=Add a new rule
 
