Update locale: zh-TW

--- a/extension/locale/zh-TW/firebug-tracing.properties
+++ b/extension/locale/zh-TW/firebug-tracing.properties
@@ -1,8 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):nn
-# Firebug tracing console menu items (located in Firebug's menu).nn
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):n\n
+# Firebug tracing console menu items (located in Firebug\'s menu).n\n
 Open_Firebug_Tracing=開啟 Firebug 追溯 (Tracing)
 Always_Open_Firebug_Tracing=總是啟用 Firebug 追溯
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).nn
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).n\n
 title.Tracing=追溯
 tracing.Show_Scope_Variables=顯示作用範圍中的變數
 tracing.Show_Time=顯示時間
