--- a/extension/locale/zh-TW/cookies.properties
+++ b/extension/locale/zh-TW/cookies.properties
@@ -1,216 +1,138 @@
 # LOCALIZATION NOTE (extensions.firecookie@janodvarko.cz.description):
-
-# Description of this extension.
-
-extensions.firecookie@janodvarko.cz.description=Firebug 用的 Cookie 管理員。要使用此擴充套件，需先安裝 Firebug 。
-# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
-
 cookies.Panel=Cookies
-# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
-
+panel.tip.cookies=檢測或調整 cookie
+# Description of this extension.
 cookies.Session=Session
-# LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
-
+# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
+# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
 cookies.AllowGlobally=接受所有網站的 cookie
+cookies.tip.AllowGlobally=預設接受或拒絕所有 cookie
+# LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
 # LOCALIZATION NOTE (cookies.LogEvents): Label used in Cookies panel options menu (the
-
 # small arrow next to the Cookies panel label). If checked, various cookies events are
-
-# displayed in Firebug's Console panel.
-
 cookies.LogEvents=在 console 中顯示 log
+cookies.tip.LogEvents=在主控台面板顯示各種 cookie 事件
+# displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
-
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
-
 # if the permission is changed to deny.
-
-# xxxHonza: currently not displayed in the UI
-
 cookies.clearWhenDeny=拒絕時清除 cookie
+# xxxHonza: currently not displayed in the UI
 # LOCALIZATION NOTE (cookies.Cut, cookies.Copy, cookies.CopyAll, cookies.Paste,
-
 # cookies.Delete): Support for clipboard actions. Used in a cookie context menu
-
-# (right click on a cookie in the Cookies panel).
-
 cookies.Cut=剪下
 cookies.Copy=複製
 cookies.CopyAll=全部複製
 cookies.Paste=貼上
 cookies.Delete=刪除
+# (right click on a cookie in the Cookies panel).
 # LOCALIZATION NOTE (cookies.Clear Value): Label for an item in the cookie context menu.
-
-# Clears cookie value, but not removes the cookie itself.
-
 cookies.Clear_Value=清除內容
+# Clears cookie value, but not removes the cookie itself.
 # LOCALIZATION NOTE (cookies.Edit): Label for an item in the cookie context menu. Displays
-
-# a dialog for editing clicked cookie.
-
 cookies.Edit=編輯
 cookies.Accept=接受
+# a dialog for editing clicked cookie.
 # LOCALIZATION NOTE (cookies.header.Reset_Header): Used in cookie header context menu (right
-
 # click on a header in the Cookies panel). This action restores default state of the header
-
-# (visibility and size of all columns)
-
 cookies.header.Reset_Header=重設標頭
+# (visibility and size of all columns)
 # LOCALIZATION NOTE (cookies.Intro, cookies.ExceptionsTitle): Used for managing Cookie panel
-
-# enablement. Used only if Firebug 1.2 and 1.3 is installed
-
-cookies.Intro=你可以指定個別網站永久允許或拒絕 cookie，\n輸入完整網址並點選封鎖、允許或允許此次連線（Session）。
+cookies.Intro=你可以指定個別網站永久允許或拒絕 cookie，\n輸入完整網址並點選封鎖、允許或允許此次連線（Session）
 cookies.ExceptionsTitle=例外 - Cookies
+# enablement. Used only if Firebug 1.2 and 1.3 is installed
 # LOCALIZATION NOTE (cookies.modulemanager.description, cookies.HostEnable, cookies.HostDisable,
-
 # cookies.Permissions, cookies.PermissionsIntro): Various labels used for mangaing Cookies panel
-
 # enablement. Used only if Firebug 1.2 and 1.3 is installed.
-
-# examples: Enable Cookies panel for www.softwareishard.com
-
 cookies.modulemanager.description=Cookie 監視支援
 cookies.HostEnable=對 %S 啟用 Cookies 面板
 cookies.HostDisable=對 %S 停用 Cookies 面板
 cookies.Permissions=啟用或停用 Cookies 面板
-cookies.PermissionsIntro=選擇網站要啟用／停用 Cookies 面板。
+cookies.PermissionsIntro=選擇網站要啟用／停用 Cookies 面板
+# examples: Enable Cookies panel for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.SystemPages, cookies.LocalFiles): Labels used in the Cookies
-
-# panel if it's disabled (only for Firebug 1.2 and 1.3).
-
 cookies.SystemPages=系統頁面
 cookies.LocalFiles=本地端檔案
+# panel if it's disabled (only for Firebug 1.2 and 1.3).
 # LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when cookies
-
-# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
-
 cookies.confirm.removeall=你要清除清單中的所有 cookie 嗎？
+# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
 # LOCALIZATION NOTE (cookies.confirm.removeallsession): Used in a confirmation dialog when
-
-# all session cookies are going to be deleted
-
 cookies.confirm.removeallsession=你要清除清單中的所有 session cookie 嗎？
+# all session cookies are going to be deleted
 # LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
-
 # Message within a confirmation dialog that is displayed when deleting cookies.
-
 # This message is displayed next to a check-box that can be used to disabled this
-
-# confirmation.
-
 cookies.msg.Do_not_show_this_message_again=不要再顯示此訊息
+# confirmation.
 # LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
-
-# that says whether a confirmation dialog is displayed when removing cookies. 
-
 cookies.Confirm_cookie_removal=清除 cookie 前先詢問
+cookies.tip.Confirm_cookie_removal=勾選時，刪除清單中所有 cookie 前會先顯示確認對話框
+# that says whether a confirmation dialog is displayed when removing cookies. 
+cookies.removeall.tooltip=清除清單中的所有 cookie
 # LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
-
-cookies.removeall.tooltip=清除清單中的所有 cookie。
 # LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
-
-# Cookies->Remove Session Cookies menu
-
 cookies.Remove_Session_Cookies=清除 session cookie
+# Cookies->Remove Session Cookies menu
+cookies.removeallsession.tooltip=清除清單中的所有 session cookie
 # LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
-
-cookies.removeallsession.tooltip=清除清單中的所有 session cookie。
 # LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
-
-# examples: Create new cookie for www.softwareishard.com
-
 cookies.createcookie.tooltip=在 %S 新增 cookie
-# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
-
+# examples: Create new cookie for www.softwareishard.com
 cookies.createcookie.defaultvalue=內容
+# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
 # LOCALIZATION NOTE (cookies.perm.manage.tooltip): A tooltip for permissions button that
-
 # is located on a Cookis panel toolbar.
-
-# examples: Manage cookie permissions for www.softwareishard.com
-
 cookies.perm.manage.tooltip=管理 %S 的 cookie 權限
+# examples: Manage cookie permissions for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
-
 # displayed in Firebug's Console panel when all cookie in Firefox are removed
-
 # To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
-
-# Remove All Cookies in the dialog.
-
 cookies.console.cookiescleared=已清除所有 cookie。
-# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
-
-# displayed in Firebug's Console panel when all cookie in Firefox are removed
-
-# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
-
 # Remove All Cookies in the dialog.
-
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
 cookies.console.sessioncookiescleared=已清除所有 session cookie。
+# Remove All Cookies in the dialog.
 # LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
-
 # A label for a cookie event that is displayed in Firebug's Console panel when cookies are
-
-# rejected by the current site.
-
 cookies.console.cookiesrejected=已拒絕的 cookie：
 cookies.console.nocookiesreceived=沒有收到 cookie
+# rejected by the current site.
 # LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
-
 # cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
-
-# events displayed in Firebug's Console panel.
-
 cookies.console.cookie=Cookie
 cookies.console.deleted=刪除
 cookies.console.added=新增
 cookies.console.changed=變更
 cookies.console.cleared=清除
+# events displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
-
 # Displayed in the Cookies panel for domain cookies.
-
-# xxxHonza: not used in the UI now.
-
 cookies.domain.label=網域
+# xxxHonza: not used in the UI now.
 # LOCALIZATION NOTE (cookies.secure.label): Label used for marking secure cookie.
-
-# Displayed in the Cookies panel for secure cookies.
-
 cookies.secure.label=Secure
+# Displayed in the Cookies panel for secure cookies.
 # LOCALIZATION NOTE (cookies.status.accepted, cookies.status.downgraded,
-
 # cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
-
-# displayed in Status column.
-
 cookies.status.accepted=Accepted
 cookies.status.downgraded=Downgraded
 cookies.status.flagged=Flagged
 cookies.status.rejected=Rejected
+# displayed in Status column.
 # LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
-
 # cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
-
-# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
-
 cookies.info.valuetab.label=內容
 cookies.info.rawdatatab.Raw_Data=原始數值
 cookies.info.jsontab.JSON=JSON
 cookies.info.xmltab.XML=XML
+# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
 # LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
-
 # cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
-
 # cookies.default.warn, cookies.host.session, cookies.host.accept,
-
 # cookies.host.reject): Various labels for cookie permissions.
-
-# examples: Accept cookies from www.softwareishard.com
-
 cookies.default.session=預設（接受 session cookie）
 cookies.default.thirdPartySession=預設（接受第三方 session cookie）
 cookies.default.thirdParty=預設（接受 cookie）
@@ -220,23 +142,16 @@ cookies.default.warn=預設（接受 cookie 前先警告）
 cookies.host.session=接受來自 %S 的 session cookie
 cookies.host.accept=接受來自 %S 的 cookie
 cookies.host.reject=拒絕來自 %S 的 cookie
+# examples: Accept cookies from www.softwareishard.com
 # LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
-
 # cookies.edit.invalidpath): Various error messages used when a new cookie is created
-
-# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
-
 cookies.edit.invalidname=無效的 cookie 名稱。
 cookies.edit.invalidhost=無效的 cookie 主機。
 cookies.edit.invalidpath=無效的 cookie 路徑。
+# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
 # LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
-
 # cookies.header.size, cookies.header.path, cookies.header.expires,
-
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
-
-# Column labels used in the cookie header.
-
 cookies.header.name=名稱
 cookies.header.value=內容
 cookies.header.domain=網域
@@ -246,16 +161,11 @@ cookies.header.expires=有效期限
 cookies.header.security=安全性
 cookies.header.status=狀態
 cookies.header.httponly=HTTP 專用
+# Column labels used in the cookie header.
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
-
 # cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
-
 # cookies.header.expires.tooltip, cookies.header.security.tooltip,
-
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
-
-# Column tooltips used in the cookie header.
-
 cookies.header.name.tooltip=cookie 名稱
 cookies.header.value.tooltip=cookie 保存的值
 cookies.header.domain.tooltip=保存此 cookie 的網域
@@ -265,130 +175,79 @@ cookies.header.expires.tooltip=cookie 的過期時間
 cookies.header.security.tooltip=顯示是否為 secure cookie
 cookies.header.status.tooltip=cookie 狀態（downgraded、flagged 等）
 cookies.header.httponly.tooltip=顯示 cookie 是否僅於 HTTP 有效
+# Column tooltips used in the cookie header.
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
-
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
-
 # request, there is an additional Cookies tab displayed when the user expands the request.
-
-# These labels are used within this tab.
-
 cookies.netinfo.Received_Cookies=已收到的 cookie
 cookies.netinfo.Sent_Cookies=已送出的 cookie
+# These labels are used within this tab.
 # LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
-
-# xxxHonza: Not implemented yet.
-
 cookies.Path_Filter=路徑過濾器
-# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
-
+# xxxHonza: Not implemented yet.
 cookies.menu.Cookies=Cookies
+# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
 # LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
-
 # cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
-
-# tooltips for exporting menus available under Cookies menus.
-
 cookies.export.Export_All_Cookies=匯出所有 cookie…
 cookies.export.Export_All_Cookies_Tooltip=將所有瀏覽器 cookie 匯出到 cookies.txt 檔案
 cookies.export.Export_For_Site=匯出此網站的 cookie
 cookies.export.Export_For_Site_Tooltip=將此網站的 cookie 匯出到 cookies.txt 檔案
+# tooltips for exporting menus available under Cookies menus.
 # LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
-
 # when the user is trying to create a cookie and there is no active page (site). This should
-
-# never happen.
-
 cookies.message.There_is_no_active_page=沒有活動中的頁面。
+# never happen.
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.Disable_Break_On_Cookie):
-
 # Tooltips for resume button that are used when the Cookies panel is currently selected.
-
 # The button allows stopping JS execution when a cookie on the current page is modified
-
-# added or removed.
-
 cookies.Break_On_Cookie=Cookie 改變時中斷
 cookies.Disable_Break_On_Cookie=停用在 cookie 改變時中斷
+# added or removed.
 # LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
-
-# displayed in Breakpoints panel (in the Script panel)
-
 cookies.Cookie_Breakpoints=Cookie 中斷點
+# displayed in Breakpoints panel (in the Script panel)
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.menu.tooltip.Break_On_Cookie):
-
 # Label and tooltip for a context menu item used when the user right clicks on a cookie. 
-
 # examples: Break on 'MyCookie' cookie
-
-# examples: Break on 'MyCookie' when removed or changed.
-
 cookies.menu.Break_On_Cookie=在 '%S' cookie 中斷
-cookies.menu.tooltip.Break_On_Cookie=在 '%S' 移除或變更時中斷。
+cookies.menu.tooltip.Break_On_Cookie=在 '%S' 移除或變更時中斷
+# examples: Break on 'MyCookie' when removed or changed.
 # LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
-
-# used when user right clicks on a cookie with existing breakpoint.
-
 cookies.menu.Edit_Breakpoint_Condition=編輯中斷點條件
+# used when user right clicks on a cookie with existing breakpoint.
 # LOCALIZATION NOTE (cookies.Breakpoint_condition_evaluation_fails): Message displayed
-
-# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
-
 cookies.Breakpoint_condition_evaluation_fails=中斷點條件執行失敗
-# DTD strings converted (main Firecokie UI, see fireCookie.xul)
-
+# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
 cookies.RemoveAll=移除所有 cookie
 cookies.Create=建立 cookie
+# DTD strings converted (main Firecokie UI, see fireCookie.xul)
 # LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
-
-# menu on Cookies toolbar.
-
 cookies.Tools=工具
 cookies.ToolsTooltip=工具
+# menu on Cookies toolbar.
 # LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
-
-# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
-
 cookies.ViewAll=顯示所有 cookie…
 cookies.ViewAllTooltip=開啟 Cookie 管理員
+# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 # LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
-
 # tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
-
-# dialog for setting web site cookie permissions.
-
 cookies.ViewExceptions=網站權限…
 cookies.ViewExceptionsTooltip=檢視已設定權限的網站清單
+# dialog for setting web site cookie permissions.
 # LOCALIZATION NOTE (cookies.Help, cookies.HelpTooltip, cookies.About,
-
 # cookies.AboutTooltip) Labels and tooltips for additional menu items in Tools menu.
-
-cookies.Help=說明
-cookies.HelpTooltip=Firecookie 說明
-cookies.About=關於…
-cookies.AboutTooltip=關於 Firecookie
 # LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
-
-# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
-
-# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
-
-# presented on the Cookie toolbar.
-
 cookies.Filter=過濾器
-cookies.FilterTooltip=按選項過濾 cookie 清單的顯示。
+cookies.FilterTooltip=按選項過濾 cookie 清單的顯示
 cookies.filter.byPath=按目前路徑過濾 cookie
-cookies.filter.byPathTooltip=只顯示符合目前路徑的 cookie。
+cookies.filter.byPathTooltip=只顯示符合目前路徑的 cookie
 cookies.filter.showRejectedCookies=顯示被拒絕的 cookie
-cookies.filter.showRejectedCookiesTooltip=已被拒絕的 cookie 也要顯示。
+cookies.filter.showRejectedCookiesTooltip=已被拒絕的 cookie 也要顯示
+# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
+# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
+# presented on the Cookie toolbar.
 # LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
-
-# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
-
-# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
-
-# cookies.edit.session.label): Edit Cookie dialog UI
-
 cookies.edit.title=編輯 cookie
 cookies.edit.name.label=名稱：
 cookies.edit.domain.label=主機：
@@ -398,3 +257,10 @@ cookies.edit.value.label=內容：
 cookies.edit.secure.label=Secure Cookie
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=Session
+# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
+# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
+cookies.console.Cookies=Cookies
+cookies.console.Filter_By_Cookies=只顯示 Cookies
+# cookies.edit.session.label): Edit Cookie dialog UI
+# Customize Shortcuts dialog (Firebug menu)
+firebug.shortcut.removeAllCookies.label=移除所有 Cookie
