Issue 5573: 	When a response comes from the cache, the headers are shown twice

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -684,6 +684,11 @@ ResponseHeaders=Response Headers
 CachedResponseHeaders=Response Headers From Cache
 PostRequestHeaders=Request Headers From Upload Stream
 
+# LOCALIZATION NOTE (net.label.ResponseHeadersFromBFCache):
+# Label (noun) used in the Net panel and displayed instead of Response Headers
+# if the response comes directly from the cache (BFCache).
+net.label.ResponseHeadersFromBFCache=The request was resolved directly from the cache, so we have no response from the server. See below for the cached response.
+
 # LOCALIZATION NOTE (plural.Limit_Exceeded2): Semicolon list of plural forms.
 # A message displayed in the Net panel when some entries must be removed in the case the maximum number
 # of entries has been reached.
